--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,5 @@
 NODE_ENV=development
+DATABASE_URL="file:./dev.db"
+DISCORD_TOKEN="Iamnotarealtoken.GNY4c0.oWksETtZ9oGQuzT5P_jGfeCdx"
+DISCORD_CLIENT_ID="123299123456780"
+PORT=5000
